--- a/package.json
+++ b/package.json
@@ -6,13 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server ./db.json"
   },
   "dependencies": {
-    "vue": "^3.4.21"
+    "@types/axios": "^0.14.0",
+    "axios": "^1.7.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.21",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
+    "json-server": "^1.0.0-beta.0",
+    "node-sass": "^9.0.0",
+    "sass": "^1.77.4",
+    "sass-loader": "^14.2.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vue-tsc": "^2.0.6"
